--- a/src/components/Dropdown/DropdownArrow/DropdownArrow.scss
+++ b/src/components/Dropdown/DropdownArrow/DropdownArrow.scss
@@ -6,14 +6,13 @@
   &::after {
     content: '';
     position: absolute;
+    top: 50%;
     right: 2px;
-    width: 0;
-    height: 0;
+    transform: translateY(-50%);
   }
 
   &--open {
     &::after {
-      top: calc(50% - 5px);
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
       border-bottom: 5px solid var(--black-color);
@@ -22,7 +21,6 @@
 
   &--close {
     &::after {
-      top: calc(50% - 2px);
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
       border-top: 5px solid var(--black-color);
