--- a/src/pages/Root/Header/Header.scss
+++ b/src/pages/Root/Header/Header.scss
@@ -2,4 +2,13 @@
   display: flex;
   justify-content: space-between;
   padding-top: 60px;
+
+  &__language {
+    > .language-menu-item__description {
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 22px;
+      color: var(--black-color);
+    }
+  }
 }
