--- a/src/pages/Root/LanguageSelect/LanguageMenuItem/LanguageMenuItem.scss
+++ b/src/pages/Root/LanguageSelect/LanguageMenuItem/LanguageMenuItem.scss
@@ -2,10 +2,17 @@
   display: flex;
   align-items: center;
   gap: 13px;
+  font-size: 20px;
 
   &__description {
-    font-weight: 600;
+    font-weight: 400;
+    font-size: 12px;
     color: var(--black-color);
     text-transform: uppercase;
+    color: #fff;
   }
+}
+
+.language-menu-item + .language-menu-item {
+  margin-top: 12px;
 }
