--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,21 @@ body {
   font-size: 16px;
   line-height: 22px;
   color: var(--black-color);
+
+  & * {
+    box-sizing: border-box;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 :root {
