add layout for sign up form

--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -3,7 +3,7 @@
     justify-self: center;
     display: flex;
     align-items: center;
-    margin-top: -90px;
+    margin-top: -50px;
     min-height: 850px;
 
     @media (max-width: 360px) {
@@ -16,8 +16,7 @@
     background-color: #fff;
     border-radius: 15px;
     max-width: 467px;
-    padding: 80px;
-    padding-top: 65px;
+    padding: 60px 80px;
     display: flex;
     flex-direction: column;
     gap: 40px;
