--- a/src/pages/Root/Root.scss
+++ b/src/pages/Root/Root.scss
@@ -1,7 +1,7 @@
-.app {
+.my-root {
   max-width: 1497px;
   margin: 0 auto;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  height: 100vh;
+  min-height: 100vh;
 }
