add layout for confirm email

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,7 @@ body {
   --black-color: #333;
   --bg-color: linear-gradient(180deg, #34457a 0%, rgba(34, 46, 86, 0.99) 100%);
   --grey2-color: #f3f3f3;
+  --red2-color: #ff5555;
   --inner-bolder-color: #e6e6e6;
   --button-bolder-radius: 4px;
 }
