add layout for last numbers phone

--- a/src/pages/Root/Footer/Footer.scss
+++ b/src/pages/Root/Footer/Footer.scss
@@ -3,6 +3,7 @@
   padding-bottom: 33px;
 
   @media (max-width: 360px) {
+    margin-top: 0;
     background-color: #fff;
     padding-left: 16px;
     padding-right: 16px;
