--- a/src/components/Label/Label.scss
+++ b/src/components/Label/Label.scss
@@ -6,6 +6,13 @@
   margin-bottom: 14px;
   position: relative;
 
+  @media (max-width: 360px) {
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+  }
+
   &--required {
     &::after {
       content: '*';
